--- a/dashboard/config/locales/scripts.en.yml
+++ b/dashboard/config/locales/scripts.en.yml
@@ -17046,7 +17046,7 @@ en:
 
             **New to teaching Game Design?**
 
-            Get started with our [self-paced Professional Learning](https://studio.code.org/courses/3-5gamedesign-2024).
+            Get started with our self-paced Professional Learning (Coming Soon).
           student_description: ''
         gettingstarted-k5:
           lessons:
@@ -17974,7 +17974,7 @@ en:
           title: Preparing to Teach Computer Vision
           description_audience: ''
           description_short: ''
-          description: "**You will:** \n* Get an introduction to Teaching Computer Vision\n* Define and identify different uses of computer vision\n* Utilize the design process to solve problems\n* Explore Computer Vision lessons\n\n**Suggested Time:** 90 minutes"
+          description: "#### **You will:** \n* #### Get an introduction to Teaching Computer Vision\n* #### Define and identify different uses of computer vision\n* #### Utilize the design process to solve problems\n* #### Explore Computer Vision lessons\n\n#### **Suggested Time:** 90 minutes"
           student_description: ''
         self-paced-pl-coding-with-ai-2024:
           lessons: {}
@@ -17983,7 +17983,7 @@ en:
           title: Preparing to Teach Coding with AI
           description_audience: ''
           description_short: ''
-          description: "**You will:**\n* Get an introduction to Coding with AI\n* Learn about different Large Language Models\n* Practice using AI to help with the coding process\n* Explore Coding with AI lessons\n\n**Suggested Time:** 120 minutes \n"
+          description: "#### **You will:**\n* #### Get an introduction to Coding with AI\n* #### Learn about different Large Language Models\n* #### Practice using AI to help with the coding process\n* ####Explore Coding with AI lessons\n\n#### **Suggested Time:** 120 minutes \n"
           student_description: "**You will: **\n* Get an introduction to Coding with AI\n* Learn about different Large Language Models\n* Practice using AI to help with the coding process\n* Explore Coding with AI lessons\n\n**Suggested Time:** 120 minutes "
         self-paced-pl-coding-w-ai-2024:
           lessons: {}
@@ -18138,10 +18138,10 @@ en:
             lessonGroup-2:
               display_name: Getting Started with Code.org
           name: k5gettingstarted
-          title: Getting Started
+          title: Getting Started [Optional]
           description_audience: ''
           description_short: ''
-          description: "#### **You will:**\n\n#### * Get an introduction to Code.org’s mission. \n#### * Learn how to navigate the Code.org website and teacher tools.\n#### * Set up a classroom section.\n#### * Locate and use course lesson plans and teacher resources.\n#### * Learn how to access support while teaching Code.org curricula.\n\n#### **Suggested time:** 80 minutes\n"
+          description: "#### **You will:**\n\n* ####  Get an introduction to Code.org’s mission. \n* ####  Learn how to navigate the Code.org website and teacher tools.\n* ####  Set up a classroom section.\n* ####  Locate and use course lesson plans and teacher resources.\n* ####  Learn how to access support while teaching Code.org curricula.\n\n#### **Suggested time:** 80 minutes\n"
           student_description: "#### **You will:**\n\n#### * Get an introduction to Code.org’s mission. \n#### * Learn how to navigate the Code.org website and teacher tools.\n#### * Set up a classroom section.\n#### * Locate and use course lesson plans and teacher resources.\n#### * Learn how to access support while teaching Code.org curricula.\n\n#### **Suggested time:** 80 minutes\n"
         k5howaimakesdecisions:
           lessons: {}
@@ -18217,7 +18217,7 @@ en:
           lessons: {}
           lesson_groups: {}
           name: k5maker5thgrade
-          title: ''
+          title: 5th Grade
           description_audience: ''
           description_short: ''
           description: "#### This module covers the concepts and skills that are in the first micro:bit track.\n\n#### **You will:**\n* #### Explore an unplugged coding lesson. \n* #### Code using events with Code.org.\n\n* #### Create and code with variables.\n\n\n#### **Suggested Time:** 70 minutes\n\n\n"
